--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,28 +4,17 @@ steps:
     args:
       - 'build'
       - '-t'
-      - 'kvel12/plant-leaves-api:latest'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/green-ai/plant-leaves-api:latest'
+      - '-t'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/green-ai/plant-leaves-api:v1.0'
       - '.'
   
-  # Login a DockerHub
+  # Subir a Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        echo $$DOCKER_PASSWORD | docker login -u $$DOCKER_USERNAME --password-stdin
-    secretEnv: ['DOCKER_USERNAME', 'DOCKER_PASSWORD']
+    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/green-ai/plant-leaves-api:latest']
   
-  # Subir a DockerHub
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'kvel12/plant-leaves-api:latest']
-
-availableSecrets:
-  secretManager:
-    - versionName: projects/$PROJECT_ID/secrets/dockerhub-username/versions/latest
-      env: 'DOCKER_USERNAME'
-    - versionName: projects/$PROJECT_ID/secrets/dockerhub-password/versions/latest
-      env: 'DOCKER_PASSWORD'
+    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/green-ai/plant-leaves-api:v1.0']
 
 timeout: 1800s
 
